--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,6 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<body>
   <div class="navibar">
     <%= link_to 'breweries', breweries_path %>
     <%= link_to 'beers', beers_path %>
@@ -27,10 +25,9 @@
   <% end %>
   </div>
 
-
-
-
   <%= yield %>
+
+  <em>continuously delivered by Travis-ci</em>
 
 </body>
 </html>
